# AMRReactX

./: .gitignore  CMakeLists.txt  README.md  soul.md
docs/: INTEGRATION_NOTES.md  PELEC_EB_STABILITY_NOTES.md  STAGE4_POROSITY_FALLBACK.md  amrreactx_stage2_4_progress.md
inputs/: leak_3d_open.in  mini_plot.in  scene_cylinder_side_leak_ssw_3d.in  scene_near_ground_leak_3d.in  verify_advection_3d.in  verify_auto_dt_3d.in  verify_boundary_faces_3d.in  verify_box_source_3d.in  verify_diffusion_3d.in  verify_inlet_scalar_3d.in  verify_level1_advance_3d.in  verify_level1_diffusive_reflux_update_3d.in  verify_level1_reflux_update_3d.in  verify_level1_regrid_sync_update_3d.in  verify_level1_regrid_update_3d.in  verify_level1_restriction_update_3d.in  verify_open_backflow_3d.in  verify_porosity_cylinder_3d.in  verify_porosity_level1_advance_3d.in  verify_porosity_level1_diffusive_reflux_update_3d.in  verify_porosity_level1_reflux_update_3d.in  verify_porosity_level1_restriction_update_3d.in  verify_porosity_obstacle_3d.in  verify_porosity_source_total_rate_3d.in  verify_porosity_tagging_3d.in  verify_source_total_rate_3d.in  verify_tagging_3d.in  verify_volume_fraction_3d.in  verify_wall_3d.in
legacy/2026-05-30-prototype/: .gitignore  CMakeLists.txt  README.md
legacy/2026-05-30-prototype/src/: main.cpp
src/: main.cpp
src/AMR/: BoundaryConditions.H  BoundaryConditions.cpp  Hierarchy.H  Hierarchy.cpp  Tagging.H  (+1 more)
tools/: check_history.py  plot_amrex_scalar_svg.py  run_stage1_verification.sh  run_stage2_verification.sh  run_stage3_verification.sh  run_stage4_verification.sh
(+9 files in other folders)
